<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_temp_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"



    tools:context="com.ahsanburney.temperatureconverter.TempMainActivity">

    <TextView
        android:text="@string/TextViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.55">

        <RadioButton
            android:text="@string/toC"
            android:layout_width="171dp"
            android:layout_height="58dp"
            android:id="@+id/radioButton0"
            android:checked="true" />

        <RadioButton
            android:text="@string/toF"
            android:layout_width="195dp"
            android:id="@+id/radioButton1"
            android:layout_height="58dp" />
    </RadioGroup>

    <Button
        android:text="@string/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:onClick="clickHandler"
        android:layout_marginTop="176dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="@+id/editText" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/textView4"
        tools:maxLines="8"
        tools:scrollbars="vertical"
        android:scrollbars="vertical"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="@drawable/history_textview_border"
        android:textAlignment="gravity"
        android:padding="10dp"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/enterValue"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/textView3"
        android:layout_marginEnd="8dp"
        android:background="@drawable/history_textview_border"
        android:textAlignment="center" />



    <TextView
        android:text="@string/equalSign"
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="136dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        android:hint="@string/result"
        android:textAlignment="center"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:background="@drawable/history_textview_border"/>

</android.support.constraint.ConstraintLayout>
